# linuxcnc

./: gitnotes.txt  howto.txt  interpreter_G9_implement_notes.txt  interpreter_G9_route_notes.txt  interpreter_notes.txt
build-cmake-Desktop-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
build-cmake-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-a1eb88a51f06f9885e01.json  codemodel-v2-80ec9d974628eaaddf95.json  directory-projects.qt_lcnc_controller-Debug-4d3b03cdfb9add35a995.json  (+1 more)
build-cmake-Desktop-Debug/components/tpmod_scurve_c++/: Makefile  cmake_install.cmake
build-cmake-Desktop-Debug/components/tpmod_scurve_grotius/: Makefile  cmake_install.cmake
build-cmake-Desktop-Debug/projects/qt_lcnc_controller/: Makefile  cmake_install.cmake
build-cmake-Desktop-Debug/projects/qt_lcnc_controller/qt_lcnc_controller_autogen/: moc_predefs.h
cmake/: CMakeLists.txt  build_cmake  build_make  check_build_deps  install_build_deps  start_halshow  start_lcnc  start_test  start_test.ini
cmake/classicladder/: CMakeLists.txt
cmake/components/cyberdyne/: CMakeLists.txt  cyberdyne.c  runtest
cmake/components/motmod/: CMakeLists.txt
cmake/components/motmod_T800/: CMakeLists.txt
cmake/components/motmod_scurve/: CMakeLists.txt
cmake/components/pid/: CMakeLists.txt
cmake/components/sc_tp_src/: sc_arcs.cpp  sc_tp.c
cmake/components/scope_rt/: CMakeLists.txt
cmake/components/scurve/: scurve.c
cmake/components/test_src/: test.c
cmake/components/tpmod/: CMakeLists.txt
cmake/components/tpmod_T800/: CMakeLists.txt
cmake/components/tpmod_runners/: CMakeLists.txt
cmake/components/tpmod_scurve/: CMakeLists.txt
cmake/components/tpmod_scurve_c++/: CMakeLists.txt
cmake/components/tpmod_scurve_grotius/: CMakeLists.txt
cmake/components/tpmod_scurve_skynet/: CMakeLists.txt
cmake/components/tpmod_template/: CMakeLists.txt
cmake/gcode_py/: CMakeLists.txt
cmake/hal_py/: CMakeLists.txt
cmake/hal_tcl/: CMakeLists.txt
cmake/halcmd/: CMakeLists.txt
cmake/halmeter/: CMakeLists.txt
cmake/halrmt/: CMakeLists.txt
cmake/halscope/: CMakeLists.txt
cmake/halui/: CMakeLists.txt
cmake/io/: CMakeLists.txt
cmake/iov2/: CMakeLists.txt
cmake/libcanterp/: CMakeLists.txt
cmake/liblinuxcnc/: CMakeLists.txt
cmake/liblinuxcnchal/: CMakeLists.txt
cmake/libnml/: CMakeLists.txt
cmake/libposemath/: CMakeLists.txt
cmake/libpyplugin/: CMakeLists.txt
cmake/librs274/: CMakeLists.txt
cmake/libtooldata/: CMakeLists.txt
cmake/lineardeltakins_py/: CMakeLists.txt
cmake/linuxcnc_ex_python/: .gitignore  README.md  linuxcnc_test  run  settings.ini  test
cmake/linuxcnc_module_helper/: CMakeLists.txt
cmake/linuxcnc_py/: CMakeLists.txt
cmake/linuxcnc_tcl/: CMakeLists.txt
cmake/linuxcnclcd/: CMakeLists.txt
cmake/linuxcncrsh/: CMakeLists.txt
cmake/linuxcncsvr/: CMakeLists.txt
cmake/milltask/: CMakeLists.txt
cmake/motion_logger/: CMakeLists.txt
cmake/pci_read/: CMakeLists.txt
cmake/pci_write/: CMakeLists.txt
cmake/projects/qt_gremlin/: CMakeLists.txt  OcctQtViewer.cpp  OcctQtViewer.h  draw_primitives.cpp  draw_primitives.h  form.cpp  form.ui  interpreter.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opencascade.h  runtest
cmake/projects/qt_lcnc_controller/: CMakeLists.txt  OcctQtViewer.cpp  OcctQtViewer.h  QGCodeEditor.cpp  common.h  form.ui  icons.qrc  interpreter.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nml.h  runtest
cmake/projects/qt_nml/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  nml.h  runtest
cmake/projects/qt_occ_biclothoid_fillet/: CMakeLists.txt  OcctQtViewer.cpp  clothoid_interface.cpp  clothoid_interface.h  common.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  opencascade.cpp
cmake/projects/qt_occ_cavalier/: CMakeLists.txt  OcctQtViewer.cpp  OcctQtViewer.h  form.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  runtest
cmake/projects/qt_occ_draw/: CMakeLists.txt  OcctQtViewer.cpp  OcctQtViewer.h  draw_primitives.cpp  draw_primitives.h  form.cpp  form.h  form.ui  formoptions.ui  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  sketcher.cpp  sketcher.h
cmake/projects/qt_sai/: CMakeLists.txt  common.h  form.cpp  form.h  interpreter.cpp  interpreter_intf.cpp  interpreter_intf.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
cmake/rotarydeltakins_py/: CMakeLists.txt
cmake/rtapi/: CMakeLists.txt
cmake/sai/: CMakeLists.txt
cmake/schedrmt/: CMakeLists.txt
cmake/scripts/: gremlin_view  halcompile  mdro  modcompile  pmx485  pmx485-test  pyngcgui  qtplasmac-cfg2prefs  qtplasmac-materials  qtplasmac-plasmac2qt  qtplasmac_gcode  sim-torch  z_level_compensation
cmake/togl_py/: CMakeLists.txt
configs/sim/axis/: axis_mm.ini  axis_scurve_mm.ini  qt_axis_mm.ini  qt_axis_scurve_cplusplus_mm.ini
configs/sim/grotius/: grotius.hal  grotius.ini  grotius_no_home.ini  grotius_no_home_normal.ini  grotius_no_home_scurve.ini  halshow.preferences  postgui.hal  tool_data.txt
configs/sim/grotius/grotius.old/: grotius.ini  grotius_no_home.ini  grotius_no_home_scurve.ini
configs/sim/grotius/grotius_no_home.old/: grotius_no_home.ini  grotius_no_home_scurve.ini  plasma_tools.xlsx  tool.tbl
configs/sim/grotius/nc_files_grotius/: G9_test.ngc  nurbs.ngc  square_test.ngc  testfile.ngc  testfile_g64.ngc  testfile_look_ahead.ngc
configs/sim/grotius/nc_files_hmnijp/: spiral on surface tolerance 001.ngc  spiral on surface tolerance 01.ngc
configs/sim/grotius/nc_files_lcvette/: testfile_lcvette.ngc
configs/sim/grotius/nc_files_robh/: testfile_robh.ngc
src/emc/canterp/: canterp.cc
src/emc/motion/: command.c  motion.h  simple_tp.h
src/emc/nml_intf/: canon.hh  emc.cc  emc.hh  emc_nml.hh  motion_types.h
src/emc/rs274ngc/: canonmodule.cc  gcodemodule.cc  interp_convert.cc  interp_execute.cc  interp_internal.cc  interp_internal.hh  interp_read.cc  rs274ngc_interp.hh
src/emc/sai/: saicanon.cc  saicanon.hh
src/emc/task/: emccanon.cc  emctask.cc  emctaskmain.cc  taskintf.cc
src/emc/tp/: tc.c  tc_types.h  tp.c  tp.h  tp_debug.h  tp_types.h
(+16 files in other folders)
